New login system

--- a/auctions.html
+++ b/auctions.html
@@ -14,41 +14,9 @@
     <li><a href="contact_information.html">Contact Information</a></li>
     <li><a href="survey.html">Survey</a></li>
     <li><a href="about_us.html">About Us</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="register.html">Register</a></li>
   </ul>
   </nav>
 </div>
-<!-- Currently broken as usual by my standards
-<div class="images">
-    <img onclick="openModal(0)" id="image0" />
-    <img onclick="openModal(1)" id="image1" />
-    <img onclick="openModal(2)" id="image2" />
-    <img onclick="openModal(3)" id="image3" />
-  </div>
-  
-  <div id="lightbox" class="lightbox">
-    <button onclick="closeModal()" class="close-btn">
-      Close
-    </button>
-  
-    <div class="image-preview">
-      <img id="preview-image" />
-    </div>
-  
-    <div class="control-btns">
-      <button onclick="control(-1)" class="control-left">
-        &lt;
-      </button>
-      <button onclick="control(1)" class="control-left">
-        &gt;
-      </button>
-    </div>
-  
-    <div id="modal-images-block" class="lightbox__images">
-      <img onclick="openModal(0)" id="l-image0" />
-      <img onclick="openModal(1)" id="l-image1" />
-      <img onclick="openModal(2)" id="l-image2" />
-      <img onclick="openModal(3)" id="l-image3" />
-    </div>
-  </div>
-*/
--->
+<!-- JavaScript Removed - 28/05/2024 -->
