--- a/contact_information.html
+++ b/contact_information.html
@@ -13,6 +13,8 @@
     <li><a href="contact_information.html">Contact Information</a></li>
     <li><a href="survey.html">Survey</a></li>
     <li><a href="about_us.html">About Us</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="register.html">Register</a></li>
     <main>
       <section class="introduction">
           <h2>Our Contacts</h2>
