--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
       <input type="password" name="password" required>
       </div>
       <br>
-<!-- god bless my soul fixing this for no absolute reason explainable by nothing short of magic-->
+      <!-- please send help-->
       <div>
       <button class="submit_btn">Login</button>
       </div>
