--- a/register.html
+++ b/register.html
@@ -7,27 +7,32 @@
 <link rel="stylesheet" href="survey.css">
 </head>
 <body>
+<div class="container">
+  <nav>
+    <ul class="bar">
+    <li><a href="home.html">Home</a></li>
+    <li><a href="auctions.html">Our Products</a></li>
+    <li><a href="contact_information.html">Contact Information</a></li>
+    <li><a href="survey.html">Survey</a></li>
+    <li><a href="about_us.html">About Us</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li><a href="register.html">Register</a></li>
+  </ul>
+  </nav>
+  <form>
+  </div>
+  <div class="container">
     <form action="register.php" method="post">
         <label for="username">Username:</label>
         <input type="text" name="username" required>
         <br>
         <label for="password">Password:</label>
         <input type="password" name="password" required>
-        <br>
-        <input type="submit" value="Register">
+        </br>
+        <!-- please send help-->
+      <div>
+        <button class="submit_btn">Register</button>
+      </div>
     </form>
-    <div class="container">
-        <nav>
-          <ul class="bar">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="auctions.html">Our Products</a></li>
-          <li><a href="contact_information.html">Contact Information</a></li>
-          <li><a href="survey.html">Survey</a></li>
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="login.html">Login</a></li>
-          <li><a href="register.html">Register</a></li>
-        </ul>
-        </nav>
-        </div>
 </body>
 </html>
